2007-05-07  J. Mowery  <jmowery@tresys.com>

	* Changed apol_ipv4_addr_render so that it now takes an array
	  of uint32_t's instead of a single uint32_t.

	* Changed SWIG wrapping for apol_perm_query_t::run() to return
	  apol_string_vector_t instead of apol_vector_t.

	* Added exported pointers to SWIG wrappers of each library
	  to allow changing of the message handler callback and its
	  void * argument.

	* qpol_policy_rebuild() no longer requires a modular policy;
	  it can safely be called for any type of policy.

2007-05-04  J. Tang  <jtang@tresys.com>

	* Fixed qpol_module function names in the libqpol SWIG wrappers.

2007-05-04  J. Mowery  <jmowery@tresys.com>

	* Added SWIG wrappers for tcl to libpoldiff and libseaudit.

2007-05-02  J. Mowery  <jmowery@tresys.com>

	* Versioned symbols in other libraries.

2007-05-01  J. Mowery  <jmowery@tresys.com>

	* Versioned symbols in libqpol to allow conditional expansion
	  of neverallow rules from qpol_policy_open_from_*.

2007-05-01  J. Tang  <jtang@tresys.com>

	* Added apol_avrule_query_set_all_perms().  This changes the
	behavior when matching multiple permissions.

2007-04-30  J. Tang  <jtang@tresys.com>

	* Added --enable-swig-tcl flag to configure script.

2007-04-25  J. Tang  <jtang@tresys.com>

	* Official release of SETools-3.2.

2007-04-20  J. Tang  <jtang@tresys.com>

	* Added seaudit_log_parse_buffer(), needed because
	seaudit_log_parse() is not possible with the Java SWIG library.

	* Build system updated to suppress warnings from automake
	1.10, and for parallel compilation (i.e., make -j).

2007-04-18  J. Mowery  <jmowery@tresys.com>

	* The function apol_domain_trans_result_create_from_domain_trans_result()
	  is now publicly exported. Also added is apol_domain_trans_result_destroy()
	  to free memory used by duplicated results.

2007-04-17  J. Tang  <jtang@tresys.com>

	* Fixed potential segfault in seaudit_filter_set_date() when
	called using the same struct tm pointers that were returned by