@@ -1,3 +1,8 @@
+2007-05-08  M. Goldman  <mgoldman@tresys.com>
+	* Added next and previous buttons to seaudit
+	
+	* Added apol_bst_inorder_map()
+
 2007-05-07  J. Mowery  <jmowery@tresys.com>
 
 	* Changed apol_ipv4_addr_render so that it now takes an array
